src/llvm/wrapper/core.nim

#                                     ##  module flag should be restricted to. This behavior can be used to
#                                     ##  restrict the allowable results (via triggering of an error) of linking
#                                     ##  IDs with the **Override** behavior.
#                                     ##
#                                     ##  @see Module::ModFlagBehavior::Require
#                                     ##
#         ModuleFlagBehaviorRequire   ## *
#                                     ##  Uses the specified value, regardless of the behavior or value of the
#                                     ##  other module. If both modules specify **Override**, but the values
#                                     ##  differ, an error will be emitted.
#                                     ##
#                                     ##  @see Module::ModFlagBehavior::Override
#                                     ##
#         ModuleFlagBehaviorOverride, ## *
#                                     ##  Appends the two values, which are required to be metadata nodes.
#                                     ##
#                                     ##  @see Module::ModFlagBehavior::Append
#                                     ##
#         ModuleFlagBehaviorAppend    ## *
#                                     ##  Appends the two values, which are required to be metadata
#                                     ##  nodes. However, duplicate entries in the second list are dropped
#                                     ##  during the append operation.
#                                     ##
#                                     ##  @see Module::ModFlagBehavior::AppendUnique
#                                     ##
#         ModuleFlagBehaviorAppendUnique

# const
#     AttributeReturnIndex* = 0
#     ##  ISO C restricts enumerator values to range of 'int'
#     ##  Attribute index are either LLVMAttributeReturnIndex,
#     ##  LLVMAttributeFunctionIndex or a parameter number from 1 to N.

#     AttributeFunctionIndex* = -1
#     ##  (4294967295 is too large)
#     ##  LLVMAttributeFunctionIndex = ~0U,

# type
#     AttributeIndex* = cuint

export
    Context,
    Module,
    Type,
    Value,
    BasicBlock,
    Builder

export
    VoidType,
    HalfType,
    FloatType,
    DoubleType,
    X86FP80Type,
    FP128Type,
    PPC_FP128Type,
    LabelType,
    IntegerType,
    FunctionType,
    StructType,
    ArrayType,
    PointerType,
    VectorType,
    MetadataType,
    X86MMXType,
    TokenType
export
    FunctionValue


# REGION: Kinds

export TypeKind
    # VoidTypeKind       ## *< type with no size
    # HalfTypeKind       ## *< 16 bit floating point type
    # FloatTypeKind      ## *< 32 bit floating point type
    # DoubleTypeKind     ## *< 64 bit floating point type
    # X86FP80TypeKind    ## *< 80 bit floating point type (X87)
    # FP128TypeKind      ## *< 128 bit floating point type (112-bit mantissa)
    # PPC_FP128TypeKind  ## *< 128 bit floating point type (two 64-bits)
    # LabelTypeKind      ## *< Labels
    # IntegerTypeKind    ## *< Arbitrary bit width integers
    # FunctionTypeKind   ## *< Functions
    # StructTypeKind     ## *< Structures
    # ArrayTypeKind      ## *< Arrays
    # PointerTypeKind    ## *< Pointers
    # VectorTypeKind     ## *< SIMD 'packed' format, or other vector type
    # MetadataTypeKind   ## *< Metadata
    # X86MMXTypeKind     ## *< X86 MMX
    # TokenTypeKind      ## *< Tokens

export ValueKind
    # ArgumentValueKind
    # BasicBlockValueKind
    # MemoryUseValueKind
    # MemoryDefValueKind
    # MemoryPhiValueKind
    # FunctionValueKind
    # GlobalAliasValueKind
    # GlobalIFuncValueKind
    # GlobalVariableValueKind
    # BlockAddressValueKind
    # ConstantExprValueKind
    # ConstantArrayValueKind
    # ConstantStructValueKind
    # ConstantVectorValueKind
    # UndefValueValueKind
    # ConstantAggregateZeroValueKind
    # ConstantDataArrayValueKind
    # ConstantDataVectorValueKind
    # ConstantIntValueKind
    # ConstantFPValueKind
    # ConstantPointerNullValueKind
    # ConstantTokenNoneValueKind
    # MetadataAsValueValueKind
    # InlineAsmValueKind
    # InstructionValueKind

# proc initializeCore*(r: PassRegistryRef) {.cdecl, importc: "LLVMInitializeCore", dynlib: LLVMlib.}

# proc shutdown*() {.cdecl, importc: "LLVMShutdown", dynlib: LLVMlib.}
#     ## * Deallocate and destroy all ManagedStatic variables.
#     ##     @see llvm::llvm_shutdown
#     ##     @see ManagedStatic


# ## ===-- Error handling ----------------------------------------------------===

# proc createMessage*(message: cstring): cstring {.cdecl, importc: "LLVMCreateMessage", dynlib: LLVMlib.}
# proc disposeMessage*(message: cstring) {.cdecl, importc: "LLVMDisposeMessage", dynlib: LLVMlib.}


# type
#     DiagnosticHandler* = proc (a1: DiagnosticInfoRef; a2: pointer) {.cdecl.}
#     YieldCallback* = proc (a1: ContextRef; a2: pointer) {.cdecl.}


# REGION: Context

proc newContext*(): Context =
    ##  Create a new context.
    ##
    ##  Contexts are execution states for the core LLVM IR system.
    ##
    ##  Most types are tied to a context instance. Multiple contexts can
    ##  exist simultaneously. A single context is not thread safe. However,
    ##  different contexts can execute on different threads simultaneously.
    ## 
    ##  Wrapping:
    ##  * `contextCreate() <../llvm/Core.html#contextCreate>`_
    newContext(contextCreate())

proc globalContext*(): Context =
    #  Obtain global context instance
    newContext(getGlobalContext())

# proc contextSetDiagnosticHandler*(c: ContextRef; handler: DiagnosticHandler;diagnosticContext: pointer) {.cdecl, importc: "LLVMContextSetDiagnosticHandler", dynlib: LLVMlib.}
#     ##  Set the diagnostic handler for this context.

# proc contextGetDiagnosticHandler*(c: ContextRef): DiagnosticHandler {.cdecl, importc: "LLVMContextGetDiagnosticHandler", dynlib: LLVMlib.}
#     ##  Get the diagnostic handler of this context.

# proc contextGetDiagnosticContext*(c: ContextRef): pointer {.cdecl, importc: "LLVMContextGetDiagnosticContext", dynlib: LLVMlib.}
#     ##  Get the diagnostic context of this context.

# proc contextSetYieldCallback*(c: ContextRef; callback: YieldCallback;opaqueHandle: pointer) {.cdecl, importc: "LLVMContextSetYieldCallback", dynlib: LLVMlib.}
#     ##  Set the yield callback function for this context.
#     ##
#     ##  @see LLVMContext::setYieldCallback()

# proc contextShouldDiscardValueNames*(c: ContextRef): Bool {.cdecl, importc: "LLVMContextShouldDiscardValueNames", dynlib: LLVMlib.}
#     ##  Retrieve whether the given context is set to discard all value names.
#     ##
#     ##  @see LLVMContext::shouldDiscardValueNames()

# proc contextSetDiscardValueNames*(c: ContextRef; `discard`: Bool) {.cdecl, importc: "LLVMContextSetDiscardValueNames", dynlib: LLVMlib.}
#     ##  Set whether the given context discards all value names.
#     ##
#     ##  If true, only the names of GlobalValue objects will be available in the IR.
#     ##  This can be used to save memory and runtime, especially in release mode.
#     ##
#     ##  @see LLVMContext::setDiscardValueNames()

# proc contextDispose*(c: ContextRef) {.cdecl, importc: "LLVMContextDispose", dynlib: LLVMlib.}
#     ##  Destroy a context instance.
#     ##
#     ##  This should be called for every call to LLVMContextCreate() or memory
#     ##  will be leaked.

# proc getDiagInfoDescription*(di: DiagnosticInfoRef): cstring {.cdecl, importc: "LLVMGetDiagInfoDescription", dynlib: LLVMlib.}
#     ##  Return a string representation of the DiagnosticInfo. Use
#     ##  LLVMDisposeMessage to free the string.
#     ##
#     ##  @see DiagnosticInfo::print()

# proc getDiagInfoSeverity*(di: DiagnosticInfoRef): DiagnosticSeverity {.cdecl, importc: "LLVMGetDiagInfoSeverity", dynlib: LLVMlib.}
#     ##  Return an enum LLVMDiagnosticSeverity.
#     ##
#     ##  @see DiagnosticInfo::getSeverity()

# proc getMDKindIDInContext*(c: ContextRef; name: cstring; sLen: cuint): cuint {.cdecl, importc: "LLVMGetMDKindIDInContext", dynlib: LLVMlib.}
# proc getMDKindID*(name: cstring; sLen: cuint): cuint {.cdecl, importc: "LLVMGetMDKindID", dynlib: LLVMlib.}

# proc getEnumAttributeKindForName*(name: cstring; sLen: csize_t): cuint {.cdecl, importc: "LLVMGetEnumAttributeKindForName", dynlib: LLVMlib.}
#     ##  Return an unique id given the name of a enum attribute,
#     ##  or 0 if no attribute by that name exists.
#     ##
#     ##  See http://llvm.org/docs/LangRef.html#parameter-attributes
#     ##  and http://llvm.org/docs/LangRef.html#function-attributes
#     ##  for the list of available attributes.
#     ##
#     ##  NB: Attribute names and/or id are subject to change without
#     ##  going through the C API deprecation cycle.

# proc getLastEnumAttributeKind*(): cuint {.cdecl, importc: "LLVMGetLastEnumAttributeKind", dynlib: LLVMlib.}

# proc createEnumAttribute*(c: ContextRef; kindID: cuint; val: uint64T): AttributeRef {. cdecl, importc: "LLVMCreateEnumAttribute", dynlib: LLVMlib.}
#     ##  Create an enum attribute.

# proc getEnumAttributeKind*(a: AttributeRef): cuint {.cdecl, importc: "LLVMGetEnumAttributeKind", dynlib: LLVMlib.}
#     ##  Get the unique id corresponding to the enum attribute
#     ##  passed as argument.

# proc getEnumAttributeValue*(a: AttributeRef): uint64T {.cdecl, importc: "LLVMGetEnumAttributeValue", dynlib: LLVMlib.}
#     ##  Get the enum attribute's value. 0 is returned if none exists.

# proc createStringAttribute*(c: ContextRef; k: cstring; kLength: cuint; v: cstring;vLength: cuint): AttributeRef {.cdecl, importc: "LLVMCreateStringAttribute", dynlib: LLVMlib.}
#     ##  Create a string attribute.

# proc getStringAttributeKind*(a: AttributeRef; length: ptr cuint): cstring {.cdecl, importc: "LLVMGetStringAttributeKind", dynlib: LLVMlib.}
#     ##  Get the string attribute's kind.

# proc getStringAttributeValue*(a: AttributeRef; length: ptr cuint): cstring {.cdecl, importc: "LLVMGetStringAttributeValue", dynlib: LLVMlib.}
#     ##  Get the string attribute's value.

# proc isEnumAttribute*(a: AttributeRef): Bool {.cdecl, importc: "LLVMIsEnumAttribute", dynlib: LLVMlib.}
#     ##  Check for the different types of attributes.
# proc isStringAttribute*(a: AttributeRef): Bool {.cdecl, importc: "LLVMIsStringAttribute", dynlib: LLVMlib.}


# REGION: Module

proc newModule*(name: string): Module =
    ##  Create a new, empty module in a specific context.
    ##
    ##  If `cxt` is **nil**, created module consists in the global cnotext.
    ##
    ##  This is equivalent to calling ``newModule(name, getGlobalContext())``
    ##
    ##  Wrapping:
    ##  * `moduleCreateWithName(cstring)<../llvm/Core.html#moduleCreateWithName,cstring>`_
    ##  * `moduleCreateWithNameInContext(cstring, ContextRef)<../llvm/Core.html#moduleCreateWithNameInContext,cstring,ContextRef>`_
    result = newModule(
        moduleCreateWithName(name)
    )
proc newModule*(name: string, cxt: Context): Module =
    ##  Create a new, empty module in a specific context.
    ##
    ##  If `cxt` is **nil**, created module consists in the global cnotext.
    ##
    ##  This is equivalent to calling ``newModule(name, getGlobalContext())``
    ##
    ##  Wrapping:
    ##  * `moduleCreateWithName(cstring)<../llvm/Core.html#moduleCreateWithName,cstring>`_
    ##  * `moduleCreateWithNameInContext(cstring, ContextRef)<../llvm/Core.html#moduleCreateWithNameInContext,cstring,ContextRef>`_
    result = newModule(
        moduleCreateWithNameInContext(name, cxt.context)
    )

proc clone*(self: Module): Module =
    ##  Return an exact copy of the specified module.
    ##  
    ##  See also:
    ##  * `newModule(string, Context)<#newModule,string,Context>`_
    ##  
    ##  Wrapping:
    ##  * `cloneModule(ModuleRef)<../llvm/Core.html#cloneModule,ModuleRef>`_
    newModule(cloneModule(self.module))
